--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -85,4 +85,4 @@ style: home
             a.btn.btn-primary.btn-lg href="mailto:hey@customstrap.co" title="Contact Us" mailto: hey@customstrap.co
 footer
   .container
-    p.text-muted &copy; 2014 CustomStrap. By Wafiq Rodzuan.
+    p.text-muted &copy; 2014 Customstrap. Built by <a href="http://wafiqrodzuan.com" title="Personal site">Wafiq Rodzuan</a> with <a href="http://getbootstrap.com" title="Bootstrap">Bootstrap</a> and <a href="http://fontawesome.io" title="">Font Awesome</a>.
