--- a/source/layouts/layout.html.slim
+++ b/source/layouts/layout.html.slim
@@ -4,7 +4,11 @@ html
     meta charset="utf-8"
     meta http-equiv="X-UA-Compatible" content="IE=edge"
     meta name="viewport" content="width=device-width, initial-scale=1.0"
-    meta name="description" content="Customstrap − Bootstrap Customization Specialist"
+    meta property="og:title" content="Customstrap − Bootstrap Customization Specialist"
+    meta property="og:type" content="website"
+    meta property="og:url" content="http://www.customstrap.co/"
+    meta property="og:image" content="#{image_path('ogp.jpg')}"
+    meta property="og:description" name="description" content="We bring expertise in integrating and customizing Bootstrap into your sites. It doesn't matter if you have a rough layout on a napkin, or existing design direction, we will realize it into fully-functional web page."
     meta name="author" content="Customstrap"
     title Customstrap − Bootstrap Customization Specialist
 
