--- a/source/layouts/layout.html.slim
+++ b/source/layouts/layout.html.slim
@@ -7,7 +7,7 @@ html
     meta property="og:title" content="Customstrap − Bootstrap Customization Specialist"
     meta property="og:type" content="website"
     meta property="og:url" content="http://www.customstrap.co/"
-    meta property="og:image" content="#{image_path('ogp.jpg')}"
+    meta property="og:image" content="http://www.customstrap.co/#{image_path('ogp.jpg')}"
     meta property="og:description" name="description" content="We bring expertise in integrating and customizing Bootstrap into your sites. It doesn't matter if you have a rough layout on a napkin, or existing design direction, we will realize it into fully-functional web page."
     meta name="author" content="Customstrap"
     title Customstrap − Bootstrap Customization Specialist
